--- a/src/Home/index.css
+++ b/src/Home/index.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #202329;
-}
 
 .container {
   display: flex;
@@ -9,17 +6,18 @@ body {
   margin-top: 15%;
   color: #ffffff;
 
-  font-family: "Roboto", sem serifa;
   font-size: 50px;
 }
 
 .botao {
   display: flex;
   align-self: center;
-  margin-top: 150%;
+  margin-top: 140%;
+  text-decoration: none;
+  padding: 14px;
 
   background: #ffffff;
-  border: 1px solid #000000;
+  border: 1px solid #000000ec;
   border-radius: 20px;
-  font-family: "Roboto", sem serifa;
+  color: #202329;
 }
