--- a/src/Characters/index.css
+++ b/src/Characters/index.css
@@ -29,6 +29,8 @@
 }
 
 .title {
+  font-style: normal;
+  font-weight: 800;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -42,7 +44,6 @@
   display: flex;
   flex-direction: column;
 
-  margin-block-start:-25%;
   max-width: 84%;
   color: whitesmoke;
   background-color: #3c3e44;
