--- a/src/Home/index.css
+++ b/src/Home/index.css
@@ -1,4 +1,3 @@
-
 .container {
   display: flex;
   flex-direction: column;
@@ -6,18 +5,25 @@
   margin-top: 15%;
   color: #ffffff;
 
-  font-size: 50px;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 40px;
 }
 
 .botao {
+  font-weight: bold;
+  font-family: "Roboto";
   display: flex;
   align-self: center;
   margin-top: 140%;
-  text-decoration: none;
-  padding: 14px;
-
+  padding: 15px 24px;
+  cursor: pointer;
   background: #ffffff;
   border: 1px solid #000000ec;
   border-radius: 20px;
   color: #202329;
+}
+
+.container a {
+  text-decoration: none;
 }
